# yew-local-shit-talker

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  netlify.toml
src/: main.rs  store.rs
src/components/: display.rs  error.rs  feedback.rs  idea.rs  items.rs  list.rs  mod.rs  nav.rs  post.rs  rating.rs  report.rs
styles/: tailwind.css
