[package]
name = "rust-web2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.9.4"
